force-app/main/default/objects/Forecast_Cube_1__c/Forecast_Cube_1__c.object-meta.xml
<CustomObject>
    <description>group of forecast data like a cube, Customer-Product-Income Type Level</description>
    <label>Forecast Cube#1</label>
    <nameField>
        <displayFormat>Cube#1-rec-{0000000000}</displayFormat>
        <label>Forecast Cube 1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Cube#1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>