force-app/main/default/objects/Forecast_Cube_1__c/fields/cubeKey__c.field-meta.xml
<CustomField>
    <fullName>cubeKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ReportOwnerProductYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>