force-app/main/default/objects/Forecast_Cube_1__c/fields/Ending_Balance_04__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance_04__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ending Balance:Apr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>