force-app/main/default/objects/Forecast_Cube_1__c/fields/FTP_01__c.field-meta.xml
<CustomField>
    <fullName>FTP_01__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FTP:Jan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>