force-app/main/default/objects/Forecast_Cube_1__c/fields/FTP_03__c.field-meta.xml
<CustomField>
    <fullName>FTP_03__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FTP:Mar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>