force-app/main/default/objects/Forecast_Cube_1__c/fields/Interest_Income_02__c.field-meta.xml
<CustomField>
    <fullName>Interest_Income_02__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Income:Feb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>