force-app/main/default/objects/Forecast_Cube_1__c/fields/MoM__c.field-meta.xml
<CustomField>
    <fullName>MoM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Projection - Last Month Ending</description>
    <label>MoM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>