force-app/main/default/objects/Forecast_Cube_1__c/fields/MTD__c.field-meta.xml
<CustomField>
    <fullName>MTD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Month to Date (Current Bal - Last Month Ending Bal)</description>
    <label>MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>