force-app/main/default/objects/Forecast_Cube_1__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Forecast Cube#1s</relationshipLabel>
    <relationshipName>Forecast_Cube_1s</relationshipName>
    <type>Lookup</type>
</CustomField>